objects/User_Extension__c.object
<CustomObject>
    <description>To store user&apos;s information.</description>
    <fields>
        <fullName>AVG_Call_Report_Customer__c</fullName>
        <formula>Total_Call_Report__c / Total_Contacted_Customer_Port_Pool_Other__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AVG Call Report / Customer</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AVG_Call_Report_Month__c</fullName>
        <formula>IF( Months__c &lt;&gt;0, Call_Report__c /Months__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AVG Call Report / Month</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AVG_Call_Report_RM_Month__c</fullName>
        <formula>Team_Structure__r.AVG_Call_Report_RM_Month__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AVG Call Report/RM/Month</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Acting_Flag__c</fullName>
        <formula>User__r.Acting_Flag__c</formula>
        <label>Acting Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <formula>User__r.IsActive</formula>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Area__c</fullName>
        <formula>Team_Structure__r.AH_Name__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Area Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Call_Report_Customer_Others__c</fullName>
        <defaultValue>0</defaultValue>
        <label># Call Report Customer Others</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Call_Report_Customer_Pool__c</fullName>
        <defaultValue>0</defaultValue>
        <label># Call Report Customer Pool</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Call_Report_Customer_Port__c</fullName>
        <defaultValue>0</defaultValue>
        <label># Call Report Customer Port</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Call_Report__c</fullName>
        <defaultValue>0</defaultValue>
        <label># Call Report</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Call_Report_for_Relationship__c</fullName>
        <defaultValue>0</defaultValue>
        <label># Call Report for Relationship</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Call_Report_for_Sales__c</fullName>
        <defaultValue>0</defaultValue>
        <label># Call Report for Sales</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contacted_Customer_Other_My_Penetrate__c</fullName>
        <defaultValue>0</defaultValue>
        <label># Contacted Customer Other(My Penetrate)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contacted_Customer_Other__c</fullName>
        <defaultValue>0</defaultValue>
        <label># Contacted Customer in Other</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contacted_Customer_Pool_My_Penetrate__c</fullName>
        <defaultValue>0</defaultValue>
        <label># Contacted Customer Pool(My Penetrate)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contacted_Customer_Pool__c</fullName>
        <defaultValue>0</defaultValue>
        <label># Contacted Customer in Pool</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contacted_Customer_Port_My_Penetrate__c</fullName>
        <defaultValue>0</defaultValue>
        <label># Contacted Customer Port(My Penetrate)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contacted_Customer_Port__c</fullName>
        <defaultValue>0</defaultValue>
        <label># Contacted Customer in Port</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Customer_Other__c</fullName>
        <defaultValue>0</defaultValue>
        <label># Customer in Other</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Customer_Pool__c</fullName>
        <defaultValue>0</defaultValue>
        <label># Customer in Pool</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Customer_Port__c</fullName>
        <defaultValue>0</defaultValue>
        <label># Customer in Port</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Employee_ID__c</fullName>
        <formula>User__r.Employee_ID__c</formula>
        <label>Employee ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Face_to_Face__c</fullName>
        <defaultValue>0</defaultValue>
        <label># Face to Face</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IS_AH__c</fullName>
        <formula>IF( $User.Employee_ID__c = User__r.AH_Employee_ID__c, True, False )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IS AH</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IS_RM__c</fullName>
        <formula>IF ( $User.Employee_ID__c = User__r.Employee_ID__c , True, False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IS RM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IS_TM__c</fullName>
        <formula>IF(OR($User.Employee_ID__c = User__r.TM_Employee_ID__c,$User.Employee_ID__c = User__r.Employee_ID__c), True, False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IS TM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Job_Code__c</fullName>
        <formula>User__r.Job_Code__c</formula>
        <label>Job Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Month_Stamp__c</fullName>
        <label>Last Month Stamp</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Months__c</fullName>
        <defaultValue>0</defaultValue>
        <label># Months</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <formula>Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Network_Name__c</fullName>
        <formula>Team_Structure__r.NH_Name__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Network Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_RM__c</fullName>
        <formula>IF (Position__c = &quot;RM&quot;, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number of RM</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_RM_under_Team__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Number of RM under Team</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PCall_Report_Customer_Others__c</fullName>
        <formula>IF( Total_Call_Report__c = 0, 0, Call_Report_Customer_Others__c /  Total_Call_Report__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% Call Report Customer Others</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PCall_Report_Customer_Pool__c</fullName>
        <formula>IF(Total_Call_Report__c = 0, 0, Call_Report_Customer_Pool__c /  Total_Call_Report__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% Call Report Customer Pool</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PCall_Report_Customer_Port__c</fullName>
        <formula>IF(Total_Call_Report__c = 0, 0, Call_Report_Customer_Port__c /  Total_Call_Report__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% Call Report Customer Port</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PCall_Report_for_Relationship__c</fullName>
        <formula>IF( Total_Sales_Relationship__c = 0, 0, Call_Report_for_Relationship__c / Total_Sales_Relationship__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% Call Report for Relationship</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PCall_Report_for_Sales__c</fullName>
        <formula>IF( Total_Sales_Relationship__c = 0, 0, Call_Report_for_Sales__c / Total_Sales_Relationship__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% Call Report for Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PContacted_Customer_Other_My_Penetrate__c</fullName>
        <formula>IF(Customer_Other__c&lt;&gt;0, Contacted_Customer_Other_My_Penetrate__c / Customer_Other__c ,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% Contacted Customer Other(My Penetrate)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PContacted_Customer_Other__c</fullName>
        <formula>IF( Customer_Other__c&lt;&gt;0,Contacted_Customer_Other__c / Customer_Other__c ,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% Contacted Customer Other</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PContacted_Customer_Pool_My_Penetrate__c</fullName>
        <formula>IF( Customer_Pool__c = 0, 0, Contacted_Customer_Pool_My_Penetrate__c / Customer_Pool__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% Contacted Customer Pool(My Penetrate)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PContacted_Customer_Pool__c</fullName>
        <formula>IF( Customer_Pool__c = 0, 0, Contacted_Customer_Pool__c / Customer_Pool__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% Contacted Customer in Pool</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PContacted_Customer_Port_My_Penetrate__c</fullName>
        <formula>IF( Customer_Port__c = 0, 0, Contacted_Customer_Port_My_Penetrate__c /  Customer_Port__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% Contacted Customer Port(My Penetrate)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PContacted_Customer_Port__c</fullName>
        <formula>IF( Customer_Port__c = 0, 0, Contacted_Customer_Port__c / Customer_Port__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% Contacted Customer in Port</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PFace_to_Face__c</fullName>
        <formula>IF(Total_Face_to_Face_Call__c = 0, 0, Face_to_Face__c / Total_Face_to_Face_Call__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% Face to Face</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PPhone_Call__c</fullName>
        <formula>IF( Total_Face_to_Face_Call__c = 0, 0, Phone_Call__c /  Total_Face_to_Face_Call__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% Phone Call</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PTotal_Call_Report__c</fullName>
        <formula>PCall_Report_Customer_Others__c +  PCall_Report_Customer_Pool__c +  PCall_Report_Customer_Port__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% Total Call Report</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PTotal_Contacted_Custome_My_P__c</fullName>
        <formula>IF( (Customer_Port__c + Customer_Pool__c+ Customer_Other__c) = 0, 0,(Contacted_Customer_Port_My_Penetrate__c + Contacted_Customer_Pool_My_Penetrate__c + Contacted_Customer_Other_My_Penetrate__c )/(Customer_Port__c + Customer_Pool__c+Customer_Other__c))</formula>
        <label>% Total Contacted Customer(My Penetrate)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PTotal_Contacted_Customer_Port_Pool_My_P__c</fullName>
        <formula>IF( (Customer_Port__c + Customer_Pool__c) = 0, 0,(Contacted_Customer_Port_My_Penetrate__c + Contacted_Customer_Pool_My_Penetrate__c )/(Customer_Port__c + Customer_Pool__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% Total Contacted Customer Port&amp;Pool(MP)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PTotal_Contacted_Customer_Port_Pool__c</fullName>
        <formula>IF(( Customer_Port__c  + Customer_Pool__c )=0,0,(Contacted_Customer_Port__c + Contacted_Customer_Pool__c ) /  (  Customer_Port__c  + Customer_Pool__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% Total Contacted Customer Port&amp;Pool</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PTotal_Contacted_Customer__c</fullName>
        <formula>IF(( Customer_Port__c  + Customer_Pool__c+Customer_Other__c )=0,0,(Contacted_Customer_Port__c + Contacted_Customer_Pool__c +Contacted_Customer_Other__c ) /  (  Customer_Port__c  + Customer_Pool__c+Customer_Other__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% Total Contacted Customer</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PTotal_Face_to_Face_Call__c</fullName>
        <formula>PFace_to_Face__c +  PPhone_Call__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% Total Face to Face &amp; Call</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PTotal_Sales_Relationship__c</fullName>
        <formula>PCall_Report_for_Relationship__c +  PCall_Report_for_Sales__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% Total Sales &amp; Relationship</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Phone_Call__c</fullName>
        <defaultValue>0</defaultValue>
        <label># Phone Call</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Position__c</fullName>
        <formula>CASE ( User__r.Profile.Name ,
&quot;SME-NH&quot;, &quot;Network Head&quot;,
&quot;SME-AH&quot;, &quot;Area Head&quot;,
&quot;SME-TM&quot;, &quot;Team Manager&quot;,
&quot;SME-RM&quot;, &quot;RM&quot;,
null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Position</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Segment__c</fullName>
        <formula>User__r.Segment__c</formula>
        <label>Segment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Team_Report__c</fullName>
        <formula>Team_Structure__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Team Report</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Team_Structure__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Team</label>
        <referenceTo>Team_Structure__c</referenceTo>
        <relationshipLabel>User Extension</relationshipLabel>
        <relationshipName>User_Extension</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Total_Call_Report__c</fullName>
        <formula>Call_Report_Customer_Port__c +  Call_Report_Customer_Pool__c +  Call_Report_Customer_Others__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Call Report</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Contacted_Customer_My_Penetrate__c</fullName>
        <formula>Contacted_Customer_Other_My_Penetrate__c+ Contacted_Customer_Pool_My_Penetrate__c + Contacted_Customer_Port_My_Penetrate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Contacted Customer (My Penetrate)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Contacted_Customer_Port_Pool_Other__c</fullName>
        <formula>Contacted_Customer_Port__c  +  Contacted_Customer_Pool__c  + Contacted_Customer_Other__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Contacted Customer</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Customer__c</fullName>
        <formula>Customer_Other__c + Customer_Pool__c +Customer_Port__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Customer</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Face_to_Face_Call__c</fullName>
        <formula>Phone_Call__c +  Face_to_Face__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Face to Face &amp; Call</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Sales_Relationship__c</fullName>
        <formula>Call_Report_for_Relationship__c +  Call_Report_for_Sales__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Sales &amp; Relationship</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_visited_Customer__c</fullName>
        <label>Total visited Customer</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>User_Extension</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>User Extension</label>
    <listViews>
        <fullName>AH</fullName>
        <columns>NAME</columns>
        <columns>Team_Structure__c</columns>
        <columns>Position__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Position__c</field>
            <operation>equals</operation>
            <value>Area Head</value>
        </filters>
        <label>AH</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>External_ID__c</columns>
        <columns>Position__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>NH</fullName>
        <columns>NAME</columns>
        <columns>Team_Structure__c</columns>
        <columns>Position__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Position__c</field>
            <operation>equals</operation>
            <value>Network Head</value>
        </filters>
        <label>NH</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>RM</fullName>
        <columns>NAME</columns>
        <columns>Team_Structure__c</columns>
        <columns>Position__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Position__c</field>
            <operation>equals</operation>
            <value>RM</value>
        </filters>
        <label>RM</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>TM</fullName>
        <columns>NAME</columns>
        <columns>Team_Structure__c</columns>
        <columns>Position__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Position__c</field>
            <operation>equals</operation>
            <value>Team Manager</value>
        </filters>
        <label>TM</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>User Extension</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>